--- a/.github/workflows/okteto.yml
+++ b/.github/workflows/okteto.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Build and Deploy
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         run: |
-          pwd 
-          ls -lh
           sudo wget -O /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.18.0/bin/linux/amd64/kubectl
           sudo chmod +x /usr/local/bin/kubectl
           mkdir -p ~/.kube && echo $KUBE_CONFIG | base64 -d > ~/.kube/config
-          kubectl version
+          kubectl apply -f ws.yml
+          kubectl apply -f videoproxy.yml
+
